# aider-mcp-server

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml
.claude/commands/: spec.md
.github/workflows/: docker-build.yml
ai_docs/: fastmcp-docs.xml
specs/: aider-mcp.md
src/aider_mcp_server/: __init__.py  __main__.py  server.py
src/aider_mcp_server/capabilities/: __init__.py  data_types.py  utils.py
src/aider_mcp_server/capabilities/tools/: __init__.py  aider_ai_code.py  aider_ask.py  aider_list_models.py
src/aider_mcp_server/tests/: __init__.py
src/aider_mcp_server/tests/capabilities/: __init__.py
src/aider_mcp_server/tests/capabilities/tools/: __init__.py  test_aider_ai_code.py  test_aider_ask.py  test_aider_list_models.py
